--- a/index.html
+++ b/index.html
@@ -4,12 +4,39 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lesson</title>
-  <link rel="stylesheet" href="css/flexboxgrid.min.css">
+  <title>pokedex</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
-
+  <div class="container">
+    <nav aria-label="Page navigation example" class="mt-5">
+      <ul class="pagination">
+        <li class="page-item"><a class="page-link btnall" href="#">all</a></li>
+        <li class="page-item"><a class="page-link btn1" href="#">1</a></li>
+        <li class="page-item"><a class="page-link btn2" href="#">2</a></li>
+        <li class="page-item"><a class="page-link btn3" href="#">3</a></li>
+        <li class="page-item"><a class="page-link btn4" href="#">4</a></li>
+        <li class="page-item"><a class="page-link btn5" href="#">5</a></li>
+      </ul>
+    </nav>
+    <div class="box">
+      <ul class="box__list list-unstyled mt-5 row d-flex">
+        <template class="box__template">
+          <li class="box__item col-md-3 mb-5">
+            <div class="box__wrapper">
+              <div class="box__img-block">
+                <img class="box__img" src="http://www.serebii.net/pokemongo/pokemon/001.png" alt="box__img">
+              </div>
+              <h3 class="box__title">husan</h3>
+              <span class="box__count">#001</span>
+            </div>
+          </li>
+        </template>
+      </ul>
+    </div>
+  </div>
+  <script src="js/pokemons.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
